--- a/Server/package.json
+++ b/Server/package.json
@@ -5,21 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon",
-    "build": "tsc && node dist/*"
+    "serve": "pnpm tsc -w & nodemon dist/server.js",
+    "preserve": "pnpm build",
+    "start": "tsx --watch src/server.ts",
+    "build": "rimraf dist && pnpm exec tsc",
+    "prestart": "pnpm build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.15.1",
   "dependencies": {
+    "@prisma/client": "6.16.1",
     "@types/express": "^5.0.3",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "rimraf": "^6.0.1",
+    "tsx": "^4.20.5"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.1",
     "@types/node": "^24.3.1",
+    "prisma": "^6.16.1",
     "typescript": "^5.9.2"
   }
 }
