--- a/Server/package.json
+++ b/Server/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "pnpm tsc -w & nodemon dist/server.js",
+    "serve": "pnpm prisma generate && pnpm tsc -w & nodemon dist/server.js",
     "preserve": "pnpm build",
-    "start": "tsx --watch src/server.ts",
+    "start": "tsx watch src/server.ts",
     "build": "rimraf dist && pnpm exec tsc",
     "prestart": "pnpm build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.16.1",
+  "packageManager": "pnpm@10.17.1",
   "dependencies": {
-    "@prisma/client": "6.16.1",
+    "@prisma/client": "^6.16.2",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
