--- a/Server/package.json
+++ b/Server/package.json
@@ -23,8 +23,10 @@
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "fast-xml-parser": "^5.2.5",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.1",
+    "@types/cors": "^2.8.19",
     "@types/node": "^24.3.1",
     "prisma": "^6.16.1",
     "typescript": "^5.9.2"
