--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@supabase/supabase-js": "^2.58.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
