--- a/Client/package.json
+++ b/Client/package.json
@@ -13,9 +13,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
@@ -28,6 +31,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.2.1",
     "shadcn": "^3.4.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -39,6 +43,7 @@
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@node": "link:types/@node",
+    "@types/cookie-parser": "^1.4.9",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
