Feat//AuthStore in zustand created, missing getting user and store infos, and store login

--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
     "my-app": "link:",
     "next-themes": "^0.4.6",
@@ -44,6 +45,7 @@
     "@eslint/js": "^9.37.0",
     "@node": "link:types/@node",
     "@types/cookie-parser": "^1.4.9",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
