--- a/Client/package.json
+++ b/Client/package.json
@@ -41,6 +41,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
+    "uuid": "^13.0.0",
     "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
