Many changes on sidebar, logic, ui, components

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.75.1",
     "@tailwindcss/vite": "^4.1.14",
+    "@typescript-eslint/parser": "^8.46.2",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,6 +33,7 @@
     "lucide-react": "^0.545.0",
     "my-app": "link:",
     "next-themes": "^0.4.6",
+    "prettier": "^3.6.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
